--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
