--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.8.1",
     "iso8601-duration": "^2.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
